# web/public/openapi.yaml
@@ -165,45 +165,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/pet.v1.GetPetResponse'
-  /pet.v1.PetService/GetPetPhoto:
-    post:
-      tags:
-        - pet.v1.PetService
-      summary: GetPetPhoto
-      operationId: pet.v1.PetService.GetPetPhoto
-      parameters:
-        - name: Connect-Protocol-Version
-          in: header
-          description: Define the version of the Connect protocol
-          required: true
-          schema:
-            $ref: '#/components/schemas/connect-protocol-version'
-          example: 1
-        - name: Connect-Timeout-Ms
-          in: header
-          description: Define the timeout, in ms
-          schema:
-            $ref: '#/components/schemas/connect-timeout-header'
-          example: 1000
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/pet.v1.GetPetPhotoRequest'
-        required: true
-      responses:
-        default:
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/connect.error'
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/pet.v1.GetPetPhotoResponse'
   /pet.v1.PetService/ListPets:
     post:
       tags:
@@ -417,11 +378,6 @@ components:
           allOf:
             - $ref: '#/components/schemas/pet.v1.PetStatus'
           title: status
-        photoUrls:
-          type: array
-          items:
-            type: string
-          title: photo_urls
         tags:
           type: array
           items:
@@ -474,33 +430,6 @@ components:
           type: boolean
           title: success
       title: DeletePetResponse
-      additionalProperties: false
-    pet.v1.GetPetPhotoRequest:
-      type: object
-      properties:
-        photoId:
-          type: string
-          title: photo_id
-          format: uuid
-      title: GetPetPhotoRequest
-      additionalProperties: false
-    pet.v1.GetPetPhotoResponse:
-      type: object
-      properties:
-        photoId:
-          type: string
-          title: photo_id
-        petId:
-          type: string
-          title: pet_id
-        data:
-          type: string
-          title: data
-          format: byte
-        mimeType:
-          type: string
-          title: mime_type
-      title: GetPetPhotoResponse
       additionalProperties: false
     pet.v1.GetPetRequest:
       type: object
@@ -586,11 +515,6 @@ components:
           allOf:
             - $ref: '#/components/schemas/pet.v1.PetStatus'
           title: status
-        photoUrls:
-          type: array
-          items:
-            type: string
-          title: photo_urls
         tags:
           type: array
           items:
@@ -613,7 +537,35 @@ components:
         birthDateEstimated:
           type: boolean
           title: birth_date_estimated
+        photos:
+          type: array
+          items:
+            $ref: '#/components/schemas/pet.v1.PetPhoto'
+          title: photos
       title: Pet
+      additionalProperties: false
+    pet.v1.PetPhoto:
+      type: object
+      properties:
+        id:
+          type: string
+          title: id
+          format: uuid
+        url:
+          type: string
+          title: url
+        mimeType:
+          type: string
+          title: mime_type
+        sizeBytes:
+          type: integer
+          title: size_bytes
+          format: int32
+        createdAt:
+          allOf:
+            - $ref: '#/components/schemas/google.protobuf.Timestamp'
+          title: created_at
+      title: PetPhoto
       additionalProperties: false
     pet.v1.PetStatus:
       type: string
@@ -648,11 +600,6 @@ components:
           allOf:
             - $ref: '#/components/schemas/pet.v1.PetStatus'
           title: status
-        photoUrls:
-          type: array
-          items:
-            type: string
-          title: photo_urls
         tags:
           type: array
           items:
